changed stacked containers to block, fixed alignment issues

--- a/src/components/ColorCodeButtonPanel/ColorCodeButtonPanel.css
+++ b/src/components/ColorCodeButtonPanel/ColorCodeButtonPanel.css
@@ -1,12 +1,11 @@
 .ColorCodeButtonPanel {
   display: flex;
   flex-direction: column;
-  width: 98%;
+  width: 100%;
   height: 5em;
   border: 1px solid grey;
   border-radius: 0.5rem;
-  overflow: hidden;
-  margin: .7em 0; }
+  overflow: hidden; }
 
 @media (-webkit-max-device-pixel-ratio: 1.99), (max-resolution: 191dpi) {
   .ColorCodeButtonPanel {
@@ -14,8 +13,7 @@
 
 @media (-webkit-min-device-pixel-ratio: 2) and (min-width: 25em), (min-resolution: 192dpi) and (min-width: 25em) {
   .ColorCodeButtonPanel {
-    height: 7em;
-    margin: 0.5em; } }
+    height: 7em; } }
 
 .ColorCodeButtonPanel__top-row {
   display: flex;
@@ -44,12 +42,20 @@
   .ColorCodeButtonPanel .button.ColorCodeButtonPanel__button--binary {
     font-size: 2.7em; } }
 
+@media (-webkit-max-device-pixel-ratio: 1.99), (max-resolution: 191dpi) {
+  .ColorCodeButtonPanel .button.ColorCodeButtonPanel__button--binary {
+    font-size: 2.7em; } }
+
 .ColorCodeButtonPanel .button.ColorCodeButtonPanel__button--hex {
   font-size: 1em; }
 
 @media (-webkit-min-device-pixel-ratio: 2) and (min-width: 25em), (min-resolution: 192dpi) and (min-width: 25em) {
   .ColorCodeButtonPanel .button.ColorCodeButtonPanel__button--hex {
     font-size: 1.5em; } }
+
+@media (-webkit-max-device-pixel-ratio: 1.99), (max-resolution: 191dpi) {
+  .ColorCodeButtonPanel .button.ColorCodeButtonPanel__button--hex {
+    font-size: 1.3em; } }
 
 .ColorCodeButtonPanel .button:hover, .ColorCodeButtonPanel .button:focus {
   background: gainsboro;
