--- a/src/components/ColorCodeControl/ColorCodeControl.scss
+++ b/src/components/ColorCodeControl/ColorCodeControl.scss
@@ -13,13 +13,10 @@ $delete-button-side-padding-small: 0.9rem;
 
 .ColorCodeControl__container {
   width: 100%;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-bottom: 0.8em;
 
   @include phone-large {
-    margin-bottom: 0.4em;
+    margin-bottom: 1em;
   }
 
   .ColorCodeControl__label {
