--- a/src/components/ColorComponentSlider/ColorComponentSlider.scss
+++ b/src/components/ColorComponentSlider/ColorComponentSlider.scss
@@ -4,11 +4,12 @@
 $radius: $standard-border-radius;
 $slider-background: $grey-6;
 $slider-background-focus: $grey-7;
+$ms-percent: 49%;
 
 .ColorComponentSlider__container {
   display: flex;
   border-radius: $radius;
-  padding: 0;
+  padding: 0.0333em;
   margin: 0;
   align-items: center;
   width: 100%;
@@ -18,11 +19,11 @@ $slider-background-focus: $grey-7;
   }
 
   @include low-res {
-    padding: .2em;
+    padding: 0.2em;
   }
 
   @include phone-large {
-    padding: .1em;
+    padding: 0.088em;
   }
 }
 
@@ -116,18 +117,18 @@ $slider-background-focus: $grey-7;
     border-color: transparent;
     border-width: 0.4em;
     color: transparent;
-    font-size: 60%;
+    font-size: $ms-percent;
   }
   &::-ms-fill-lower {
     background: $slider-background;
-    font-size: 60%;
+    font-size: $ms-percent;
     // border: 0.4em solid #ffffff;
     // border-radius: 0.8em;
     // box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
   }
   &::-ms-fill-upper {
     background: $slider-background;
-    font-size: 60%;
+    font-size: $ms-percent;
     // border: 0.4em solid #ffffff;
     // border-radius: 0.8em;
     // box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
@@ -139,7 +140,7 @@ $slider-background-focus: $grey-7;
     border-radius: 3.5em;
     cursor: pointer;
     height: 3.5em;
-    font-size: 60%;
+    font-size: 70%;
   }
 
   &.ColorComponentSlider__slider--red::-ms-thumb {
