--- a/src/components/ColorComponentsControls/ColorComponentsControls.css
+++ b/src/components/ColorComponentsControls/ColorComponentsControls.css
@@ -1,16 +1,2 @@
 .ColorComponentsControls__container {
-  flex: 1;
-  margin-top: .5em;
-  padding-top: .2em;
-  padding-bottom: .2em;
   width: 100%; }
-
-@media (-webkit-min-device-pixel-ratio: 2) and (min-width: 25em), (min-resolution: 192dpi) and (min-width: 25em) {
-  .ColorComponentsControls__container {
-    margin-top: 0;
-    padding-top: 0.3em;
-    padding-bottom: 0.2em; } }
-
-@media (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), (min-resolution: 192dpi) and (min-width: 37.5em) {
-  .ColorComponentsControls__container {
-    padding-top: 0.6em; } }
