--- a/src/components/ColorControlPanel/ColorControlPanel.css
+++ b/src/components/ColorControlPanel/ColorControlPanel.css
@@ -1,22 +1,9 @@
 .ColorControlPanel__container {
-  width: 96%;
-  flex: 1;
-  height: 6em;
+  width: 100%;
+  padding: 0 0.5em;
   display: block;
-  justify-content: center;
-  margin-top: 0.2em;
-  margin-bottom: 0.2em; }
-
-@media (-webkit-max-device-pixel-ratio: 1.99), (max-resolution: 191dpi) {
-  .ColorControlPanel__container {
-    height: 7em; } }
+  margin-bottom: 0.8em; }
 
 @media (-webkit-min-device-pixel-ratio: 2) and (min-width: 25em), (min-resolution: 192dpi) and (min-width: 25em) {
   .ColorControlPanel__container {
-    height: 8em;
-    margin-top: 0.2em;
-    margin-bottom: 0.1em; } }
-
-@media (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), (min-resolution: 192dpi) and (min-width: 37.5em) {
-  .ColorControlPanel__container {
-    margin-bottom: 0.3em; } }
+    margin-bottom: 1.0em; } }
