--- a/src/components/ColorDisplay/ColorDisplay.css
+++ b/src/components/ColorDisplay/ColorDisplay.css
@@ -1,3 +1,2 @@
 .ColorDisplay__container {
-  flex: 0;
   margin-bottom: 0; }
